--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.2",
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.0",
+    "axios": "^1.5.1",
+    "jwt-decode": "^3.1.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^8.1.3"
+    "react-hook-form": "^7.47.0",
+    "react-redux": "^8.1.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
